# nyx

./: .env.local  .gitignore  ARCHITECTURE.md  README.md  build.sh  package.json  seed-orders.ts  sinplelogic.md
contract/: hardhat.config.ts  package-lock.json  package.json
contract/contracts/: IEngine.sol  MockUSDC.sol  WardenCLOB.sol
contract/ignition/modules/: WardenCLOB.ts
contract/scripts/: deploy-all.ts  deploy-engine.ts  deploy.ts
engine/: Cargo.toml  engine.polkavm
engine/.cargo/: config.toml
engine/src/: lib.rs
nyx/: next.config.ts  package-lock.json  package.json
nyx/src/app/: globals.css  layout.tsx  page.tsx
nyx/src/app/api/telegram/notify/: route.ts
nyx/src/app/api/telegram/status/: route.ts
nyx/src/app/dashboard/: layout.tsx  providers.tsx
nyx/src/components/dashboard/: Dashboard.tsx  MarketPanel.tsx  Sidebar.tsx  WalletButton.tsx
nyx/src/components/dashboard/portfolio/: BalanceCards.tsx  FillHistory.tsx  PriceChart.tsx  YieldDashboard.tsx
nyx/src/components/dashboard/trade/: ActivityLog.tsx  DepthChart.tsx  OpenOrdersTable.tsx  OrderEntryPanel.tsx  PairSelector.tsx  StatsCards.tsx
nyx/src/components/landing/: about-section.tsx  feature-grid.tsx  footer.tsx  glitch-marquee.tsx  hero-section.tsx  navbar.tsx  workflow-diagram.tsx
nyx/src/components/ui/: dither-card.tsx
nyx/src/hooks/: useLastPrice.ts  useOrderBook.ts  useTelegram.ts
nyx/src/lib/: clob.ts  telegram.ts  wagmi.ts
