[package]
name = "shadow-warden-engine"
version = "0.1.0"
edition = "2021"
authors = ["Daiwik"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Your PVM and Solidity types
alloy-sol-types = { version = "0.7", default-features = false }
pallet-revive-uapi = { version = "0.10.1", default-features = false }
polkavm-derive = { version = "0.29.0" }

[profile.release]
panic = "abort"
lto = true
opt-level = "z"        # Optimize for size (essential for PVM)
codegen-units = 1

